--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,6 @@ kiwisolver==1.4.4
 lxml==4.9.2
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
-mplfinance==0.12.9b7
 multitasking==0.0.11
 mysql-connector-python==8.0.32
 nest-asyncio==1.5.6
@@ -59,7 +58,7 @@ six==1.16.0
 soupsieve==2.4
 SQLAlchemy==2.0.5.post1
 stack-data==0.6.2
-TA-Lib @ file:///F:\python\Crypto_Processing_Backtest\Tools\TA_Lib-0.4.24-cp310-cp310-win_amd64.whl
+TA-Lib @ file:///E:\Python\API\CryptoCurrency\botTrader\Crypto_MySQL_2\Tools\TA_Lib-0.4.24-cp310-cp310-win_amd64.whl
 tomli==2.0.1
 tornado==6.2
 traitlets==5.9.0
