--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ cryptography==39.0.2
 cycler==0.11.0
 debugpy==1.6.6
 decorator==5.1.1
+et-xmlfile==1.1.0
 exceptiongroup==1.1.0
 executing==1.2.0
 fonttools==4.39.0
@@ -36,6 +37,7 @@ multitasking==0.0.11
 mysql-connector-python==8.0.32
 nest-asyncio==1.5.6
 numpy==1.24.2
+openpyxl==3.1.2
 packaging==23.0
 pandas==1.5.3
 parso==0.8.3
@@ -58,7 +60,7 @@ pyzmq==25.0.0
 requests==2.28.2
 six==1.16.0
 soupsieve==2.4
-SQLAlchemy==2.0.5.post1
+SQLAlchemy==2.0.7
 stack-data==0.6.2
 TA-Lib @ file:///E:\Python\API\CryptoCurrency\botTrader\Crypto_Processing_Backtest\Tools\TA_Lib-0.4.24-cp310-cp310-win_amd64.whl
 tomli==2.0.1
@@ -68,4 +70,5 @@ typing_extensions==4.5.0
 urllib3==1.26.14
 wcwidth==0.2.6
 webencodings==0.5.1
+xlwt==1.3.0
 yfinance==0.2.12
