--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ iniconfig==2.0.0
 ipykernel==6.21.3
 ipython==8.11.0
 jedi==0.18.2
+joblib==1.2.0
 jupyter_client==8.0.3
 jupyter_core==5.2.0
 kiwisolver==1.4.4
@@ -41,6 +42,7 @@ openpyxl==3.1.2
 packaging==23.0
 pandas==1.5.3
 parso==0.8.3
+patsy==0.5.3
 pickleshare==0.7.5
 Pillow==9.4.0
 platformdirs==3.1.0
@@ -58,11 +60,16 @@ pytz==2022.7.1
 pywin32==305
 pyzmq==25.0.0
 requests==2.28.2
+scikit-learn==1.2.2
+scipy==1.10.1
 six==1.16.0
 soupsieve==2.4
 SQLAlchemy==2.0.5.post1
 stack-data==0.6.2
+statsmodels==0.13.5
+ta==0.10.2
 TA-Lib @ file:///F:\python\Crypto_Processing_Backtest\Tools\TA_Lib-0.4.24-cp310-cp310-win_amd64.whl
+threadpoolctl==3.1.0
 tomli==2.0.1
 tornado==6.2
 traitlets==5.9.0
